--- a/Classification task.ipynb
+++ b/Classification task.ipynb
@@ -912,7 +912,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multiclass classification with logistic Decision Tree"
+    "# Multiclass classification with Decision Tree"
    ]
   },
   {
